# QuanTrade

./: .coverage  .gitignore  Cargo.toml  book.typ  pyproject.toml
.github/workflows/: deploy.yml
book-src/: book.typ  prefix.typ  ref.bib
book-src/guide/terminology/: 债券.typ  基金.typ  技术名词.typ  期权与期货.typ  股票.typ  量化.typ  金融产品.typ
book-src/guide/tool-doc/: yfindata.typ
book-src/templates/: page.typ
config/: config.toml
lib/yFinData/: README.md  main.py  pyproject.toml
lib/yFinData/src/: constants.py  utils.py
lib/yFinData/src/cli/: add.py  cli.py  update.py
lib/yFinData/src/database/: database.py
lib/yFinData/src/get_stock/: stock_struct.py  update.py
lib/yFinData/tests/: test_integration_workflow.py
lib/yFinData/tests/test_cli/: test_cli.py  test_installed_cli.py
lib/yFinData/tests/test_database/: test_database.py
lib/yFinData/tests/test_get_stock/: test_capture_data.py  test_update.py
lib/yFinData/tests/test_yfindata/: test_add_cli.py  test_update_cli.py  test_update_missing_data.py
tests/: test_cli_functionality.py  test_yfindata_cli.py
